--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 
 
 body {
-  height: 100%;
+  min-height: 100vh;
   background: radial-gradient(circle at top, #dadadc , #484747);
   font-family: Sans-Serif;
-  color: blue;
+  color: #CEF;
 }
